--- a/SpatialDataframes_for_each_crime_category.ipynb
+++ b/SpatialDataframes_for_each_crime_category.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code uploads nine data frames to the ArcGIS server. Notice that credentials are deleted\n",
+    "These data frames were uploaded:\n",
+    "    df_important_16_17_sdf\n",
+    "    df_OTHER_16_17_sdf\n",
+    "    df_ASSAULT_16_17_sdf\n",
+    "    df_HOMICIDE_16_17_sdf\n",
+    "    df_CHILDREN_16_17_sdf\n",
+    "    df_WEAPONS_16_17_sdf\n",
+    "    df_SEXUAL_16_17_sdf\n",
+    "    df_THEFT_16_17_sdf\n",
+    "    df_VEHICLE_16_17_sdf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
