Repo is cleanded

--- a/Map.ipynb
+++ b/Map.ipynb
@@ -4253,7 +4253,7 @@
     "from arcgis import SpatialDataFrame\n",
     "import pandas as pd\n",
     "\n",
-    "gis = GIS(\"https://www.arcgis.com\", \"yessenbayev\", \"ece180final\")\n",
+    "gis = GIS(\"https://www.arcgis.com\") #Credentials are deleted\n",
     "m1 = gis.map('Los Angeles')"
    ]
   },
@@ -4269,7 +4269,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df2 = pd.DataFrame({'DR Number':df1['DR Number'],\n",
@@ -4288,7 +4290,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sdf = SpatialDataFrame(df2)\n",
@@ -4300,7 +4304,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "layer"
